react/project-memory-card/src/index.css
@font-face {
  font-family: 'poke-solid';
  src: url('./assets/PokemonSolidNormal-xyWR.ttf');
}

@font-face {
  font-family: 'pixel-reg';
  src: url('./assets/EightBitDragon-anqx.ttf');
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  font-weight: 400;
  line-height: 1.0;

  --text: #1A2425;
  --bg: #8BC5CD;
  --surface: #5A9CA4;
  --fg: #FFE69C;
  --fg2: #E6AC5A;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
  min-width: 100vw;
  min-height: 100vh;
  color: var(--text);
  background-color: var(--bg);
  font-family: 'pixel-reg';
  font-size: 1em;
  letter-spacing: 1px;
}

h1 {
  font-size: 3em;
  margin: 0;
}

h2 {
  font-size: 2.2em;
  margin: 0;
}

h3 {
  font-size: 1.2em;
  margin: 0;
}

h4 {
  font-size: 0.8rem;
  margin: 0;
}

button {
  border-radius: 4px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  letter-spacing: 1px;
  font-weight: 500;
  font-family: inherit;
  color: var(--fg);
  background-color: var(--text);
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.selected-btn {
  background-color: var(--fg2);
  color: var(--text);
}

.header {
  margin: 0;
  padding: 2em;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1em;
  background-color: var(--text);
  color: var(--fg2);
}

.header h3 {
  font-family: 'poke-solid';
  letter-spacing: 1px;
}

.scoreboard {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 4em;
  padding: 0.6em;
  background-color: var(--fg2);
  color: var(--text);
}

.grid-selector {
  background-color: var(--text);
  color: var(--fg);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 1em;
  padding: 0.6em;
}
.grid-selector button {
  padding: 0.2em;
}

.cards-container {
  margin: 1em;
  grid-column-gap: 4px;
  grid-row-gap: 4px;
  padding-bottom: 2.5em;
  overflow: hidden;
}

.grid-element {
  border-radius: 4px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 4px;
  padding: 8px;
  background-color: var(--surface);
  color: white;
  cursor: pointer;
}
.grid-element:hover {
  background-color: var(--text);
  color: var(--fg);
}

.grid-element img {
  width: 96px;
}
.grid-element h4 {
  text-transform: uppercase;
  text-align: center;
}


.footer {
  margin: 0;
  position: fixed;
  bottom: 0;
  left: 0;
  padding: 0.6em;
  width: calc(100% - 1em);
  background-color: var(--text);
  color: var(--fg);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.footer span {
  padding-right: 8px;
  border-right: 1px solid var(--fg);
}

.footer button {
  color: var(--fg);
  background: none;
  padding: 0;
  padding-left: 8px;
  margin: 0;
  transition: color 0.25s;
}
.footer button:hover {
  color: var(--fg2);
}
.footer button:focus,
.footer button:focus-visible {
  outline: 1px auto -webkit-focus-ring-color;
}

@media screen and (max-width: 992px) {
  body {
    min-width: 100vw;
    min-height: 100vh;
    font-size: 0.8em;
    letter-spacing: 1px;
    line-height: 1.2;
  }

  .grid-selector {
    text-align: center;
  }
  .grid-selector button {
    padding: 0.4em;
  }
  
  .cards-container {
    margin: 0.5em;
    overflow: scroll;
  }
  
  .grid-element {
    gap: 4px;
    padding: 4px;
  }
  .grid-element img {
    width: 64px;
  }
  .grid-element h4 {
    text-transform: uppercase;
    text-align: center;
    font-size: 0.69em;
  }
}

